# weekly-digest-ai-ml-ds

./: .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-digest.yml
config/: links.md  sources.yaml
data/: README.md  sent-urls.json
data/digests/: 2026-02-11.md  2026-02-16.md  2026-02-23.md  2026-03-02.md  2026-03-09.md  2026-03-16.md  2026-03-23.md  2026-03-30.md
digest/: __init__.py
digest/adapters/: EXPLAINER.md  __init__.py  email_sendgrid.py  email_templates.py  fetch_all.py  fetch_og_image.py  input_hacker_news.py  input_manual.py  input_reddit.py  input_rss.py  llm_anthropic.py  llm_openai.py
digest/config/: __init__.py  digest_history.py  history.py  links.py  sources.py
digest/domain/: __init__.py  email_port.py  llm_port.py  models.py  urls.py
digest/use_cases/: __init__.py  build_digest.py  pipeline_core.py
scripts/: README.md  build_digest.py
tests/: __init__.py
tests/adapters/: test_email_with_images.py  test_fetch_all.py  test_fetch_og_image.py  test_input_hacker_news.py  test_input_manual.py  test_input_reddit.py  test_input_rss.py  test_reddit_selfposts.py  test_user_agent.py
tests/config/: __init__.py  test_history.py  test_links.py  test_sources.py
tests/domain/: test_models.py  test_urls.py
tests/use_cases/: __init__.py  test_build_digest_e2e.py  test_freshness_filter.py  test_pipeline_core.py  test_prefilter_balanced.py  test_source_diversity_e2e.py
