[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digest-weekly"
version = "0.1.0"
description = "Digest semanal AI/ML/DS: agrega fuentes RSS, HN, Reddit, resume con LLM y envía email."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "PyYAML>=6.0",
    "openai>=1.0.0",
    "sendgrid>=6.11.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["digest*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
